updated a few pictures and links

--- a/src/about/about.html
+++ b/src/about/about.html
@@ -80,8 +80,8 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             </div>
                                 <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                                    <a href="https://www.linkedin.com/in/jessieguo1/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://github.com/JessieG123" class="github" target="_blank"><i class="fab fa-github"></i></a>
                                 </div>
                         </div>
                     </div>
@@ -99,8 +99,8 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             </div>
                                 <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="github" target="_blank"><i class="fab fa-github"></i></a>
                                 </div>
                         </div>
                     </div>
@@ -118,8 +118,8 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             </div>
                                 <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="github" target="_blank"><i class="fab fa-github"></i></a>
                                 </div>
                         </div>
                     </div>
@@ -136,28 +136,10 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             </div>
                                 <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                                    <a href="https://www.linkedin.com/in/shen-jane/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="github" target="_blank"><i class="fab fa-github"></i></a>
                                 </div>
                                 
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/about/jack.jpg">
-                        <div class="card-body">
-                            <h4 class="card-title">Jack Yang</h4>
-                            <div class="scrollable">
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                            </div>
-                                <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
-                                </div>
                         </div>
                     </div>
                 </div>
@@ -173,8 +155,26 @@
                                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                             </div>
                                 <div class="social">
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                                    <a href="https://www.linkedin.com/in/jason-szeto/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="github" target="_blank"><i class="fab fa-github"></i></a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/about/jack.jpg">
+                        <div class="card-body">
+                            <h4 class="card-title">Jack Yang</h4>
+                            <div class="scrollable">
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                            </div>
+                                <div class="social">
+                                    <a href="https://www.linkedin.com/in/jack-yang-hao/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="#" class="github" target="_blank"><i class="fab fa-github"></i></a>
                                 </div>
                         </div>
                     </div>
