adjusted table proportions

--- a/mcgill/mcgill.html
+++ b/mcgill/mcgill.html
@@ -155,39 +155,44 @@
 		</div> -->
 
 		<!-- stuff after map -->
+		
 		<div class="container-fluid padding">
 			<h2 class="dashboard text-center">Dashboard</h2>
-				<table class="table text-center">
-					<thead>
-						<tr>
-							<th scope="col">Date</th>
-							<th scope="col">Active Cases</th>
-							<th scope="col">Total Cases</th>
-							<th scope="col">Total Deaths</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th scope="row">1</th>
-							<td>Mark</td>
-							<td>Otto</td>
-							<td>@mdo</td>
-						</tr>
-						<tr>
-							<th scope="row">2</th>
-							<td>Jacob</td>
-							<td>Thornton</td>
-							<td>@fat</td>
-						</tr>
-						<tr>
-							<th scope="row">3</th>
-							<td>Larry</td>
-							<td>the Bird</td>
-							<td>@twitter</td>
-						</tr>
-					</tbody>
-				</table>
-		</div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <table class="table table-hover table-responsive">
+                        <thead>
+                            <tr>
+                                <th scope="col">Date</th>
+                                <th scope="col">Active Cases</th>
+                                <th scope="col">Total Cases</th>
+                                <th scope="col">Total Deaths</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Markkkkkkkkkkkkkkkkkkkkkkkkk</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
 		<div class="container-fluid padding">
 			<div class="financialaid text-center">
