--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,10 @@
 					  Universities
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="template.html">University of Toronto</a>
-						<a class="dropdown-item" href="template.html">University of Calgary</a>
-						<a class="dropdown-item" href="template.html">University of Saskatchewan</a>
-						<a class="dropdown-item" href="template.html">McGill University</a>
-						<a class="dropdown-item" href="template.html">University of Manitoba</a>
-						<a class="dropdown-item" href="template.html">University of British Columbia</a>
+						<a class="dropdown-item" href="./universities/uoft/dashboard_uoft.php">University of Toronto</a>
+						<a class="dropdown-item" href="./universities/uofc/dashboard_uofc.php">University of Calgary</a>
+						<a class="dropdown-item" href="./universities/mcgill/dashboard_mcgill.php">McGill University</a>
+						<a class="dropdown-item" href="./universities/uofm/dashboard_uofm.php">University of Manitoba</a>
 					</div>
 				  </li>
 			  <li class="nav-item">
