--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="index.css" rel="stylesheet">
-	<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+	<link rel="shortcut icon" href="./assets/favicon/favicon-32x32.ico" />
+	<link rel="shortcut icon" href="./assets/favicon/favicon-16x16.ico" />	
 	
 </head>
 <body>
