--- a/src/about/about.html
+++ b/src/about/about.html
@@ -4,80 +4,48 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Covid Overflow</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="about.css" rel="stylesheet" />
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-	  <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png"> 
+	<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png"> 
   </head>
 
-  <body>
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <!-- Brand/Logo -->
-        <a class="navbar-brand" href="../index.html">Covid Overflow</a>
+        <div class="container-fluid">
+            <!-- Brand/Logo -->
+            <a class="navbar-brand" href="index.html">Covid Overflow</a>
 
-        <!--Collapsible navbar for small screens-->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <!--Collapsible navbar for small screens-->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Universities
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a
-                  class="dropdown-item"
-                  href="../universities/uoft/dashboard_uoft.php"
-                  >University of Toronto</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="../universities/uofc/dashboard_uofc.php"
-                  >University of Calgary</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="../universities/mcgill/dashboard_mcgill.php"
-                  >McGill University</a
-                >
-                <a
-                  class="dropdown-item"
-                  href="../universities/uofm/dashboard_uofm.php"
-                  >University of Manitoba</a
-                >
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
-            </li>
-          </ul>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Universities
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="../universities/uoft/dashboard_uoft.php">University of Toronto</a>
+                            <a class="dropdown-item" href="../universities/uofc/dashboard_uofc.php">University of Calgary</a>
+                            <a class="dropdown-item" href="../universities/mcgill/dashboard_mcgill.php">McGill University</a>
+                            <a class="dropdown-item" href="../universities/uofm/dashboard_uofm.php">University of Manitoba</a>
+                        </div>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <div class="container-fluid padding">
@@ -87,23 +55,13 @@
         </div>
         <hr />
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
-          ab illo inventore veritatis et quasi architecto beatae vitae dicta
-          sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-          qui dolorem eum fugiat quo voluptas nulla pariatur?
+          We are a group of undergraduates students from University of Calgary and Mount Royal University. As we all go about these uncertain times, our school keeps us updated with
+          new COVID cases on-campus through multiple emails. We noticed that the emails were repetitive and at some point most students were not paying much attention to them. Our solution to this is 
+          a website where information about each universities' COVID cases is displayed in a convenient manner so that students can easily browse through and view the current active case number in their school. 
+          This reduces the amount of email digging and searching through pages, that may not be user friendly, students needs to do to be informed and to make safe decisions. 
         </p>
       </div>
     </div>
-
     <div class="container-fluid padding">
       <div class="whoweare text-center">
         <h1 class="display-4">Who We Are</h1>
@@ -111,146 +69,96 @@
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../assets/about/jessie.jpg" />
             <div class="card-body">
               <h4 class="card-title">Jessie Guo</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
+                  Third year University of Calgary student studying a combined degree in Computer Science and Finance. 
                 </p>
               </div>
               <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/jessieguo1/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/JessieG123" target="blank" class="github"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
         </div>
-
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../assets/about/duan.jpg" />
             <div class="card-body">
               <h4 class="card-title">Duan Le</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
+                  Third year University of Calgary student studying Software Engineering.
                 </p>
               </div>
               <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/duan-le/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/duan-le" target="blank" class="github"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
         </div>
-
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../assets/about/hemish.jpg" />
             <div class="card-body">
               <h4 class="card-title">Hemish Minhas</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
+                  Third year University of Calgary student studying a combined degree in Electrical Engineering and Finance. 
                 </p>
               </div>
               <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/hemish-minhas/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/hemish-minhas" target="blank" class="github"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../assets/about/jane.jpg" />
             <div class="card-body">
               <h4 class="card-title">Jane Shen</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
+                  Third year University of Calgary student studying Computer Science.
                 </p>
               </div>
               <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/shen-jane/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/jshenny" target="blank" class="github"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Jason Szeto</h4>
+                <div class="scrollable">
+                  <p class="card-text">
+                    Third year Mount Royal University Student studying Computer Science. 
+                  </p>
+                </div>
+                <div class="social">
+                  <a href="https://github.com/jason-szeto" target="blank"><i class="fab fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/jason-szeto/" target="blank" class="github"><i class="fab fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../assets/about/jack.jpg" />
             <div class="card-body">
               <h4 class="card-title">Jack Yang</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
+                  Third year University of Calgary student studying Computer Science.
                 </p>
               </div>
               <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="../assets/about/jason.jpg" />
-            <div class="card-body">
-              <h4 class="card-title">Jason Szeto</h4>
-              <div class="scrollable">
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum
-                </p>
-              </div>
-              <div class="social">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/jack-yang-hao/" target="blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/ahfhafh" target="blank" class="github"><i class="fab fa-github"></i></a>
               </div>
             </div>
           </div>
