--- a/src/about/about.html
+++ b/src/about/about.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Brand/Logo -->
-            <a class="navbar-brand" href="index.html">Covid Overflow</a>
+            <a class="navbar-brand" href="../index.html">Covid Overflow</a>
 
             <!--Collapsible navbar for small screens-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
