--- a/src/about/about.html
+++ b/src/about/about.html
@@ -10,7 +10,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="about.css" rel="stylesheet" />
-
+    <link rel="shortcut icon" href="../assets/favicon/favicon-32x32.ico" />
+    <link rel="shortcut icon" href="../assets/favicon/favicon-16x16.ico" />
   </head>
 
 <body>
