Reorder universities list in navbar

--- a/src/about/about.html
+++ b/src/about/about.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Covid Overflow</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -14,38 +17,67 @@
     <link rel="shortcut icon" href="../assets/favicon/favicon-16x16.ico" />
   </head>
 
-<body>
+  <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-            <!-- Brand/Logo -->
-            <a class="navbar-brand" href="../index.html">Covid Overflow</a>
+      <div class="container-fluid">
+        <!-- Brand/Logo -->
+        <a class="navbar-brand" href="../index.html">Covid Overflow</a>
 
-            <!--Collapsible navbar for small screens-->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <!--Collapsible navbar for small screens-->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Universities
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="../universities/uoft/dashboard_uoft.php">University of Toronto</a>
-                            <a class="dropdown-item" href="../universities/uofc/dashboard_uofc.php">University of Calgary</a>
-                            <a class="dropdown-item" href="../universities/mcgill/dashboard_mcgill.php">McGill University</a>
-                            <a class="dropdown-item" href="../universities/uofm/dashboard_uofm.php">University of Manitoba</a>
-                        </div>
-                    </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About Us</a>
-                </li>
-                </ul>
-            </div>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Universities
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a
+                  class="dropdown-item"
+                  href="../universities/mcgill/dashboard_mcgill.php"
+                  >McGill University</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="../universities/uofc/dashboard_uofc.php"
+                  >University of Calgary</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="../universities/uofm/dashboard_uofm.php"
+                  >University of Manitoba</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="../universities/uoft/dashboard_uoft.php"
+                  >University of Toronto</a
+                >
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About Us</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <div class="container-fluid padding">
@@ -55,10 +87,17 @@
         </div>
         <hr />
         <p>
-          We are a group of undergraduates students from University of Calgary and Mount Royal University. As we all go about these uncertain times, our school keeps us updated with
-          new COVID cases on-campus through multiple emails. We noticed that the emails were repetitive and at some point most students were not paying much attention to them. Our solution to this is 
-          a website where information about each universities' COVID cases is displayed in a convenient manner so that students can easily browse through and view the current active case number in their school. 
-          This reduces the amount of email digging and searching through pages, that may not be user friendly, students needs to do to be informed and to make safe decisions. 
+          We are a group of undergraduates students from University of Calgary
+          and Mount Royal University. As we all go about these uncertain times,
+          our school keeps us updated with new COVID cases on-campus through
+          multiple emails. We noticed that the emails were repetitive and at
+          some point most students were not paying much attention to them. Our
+          solution to this is a website where information about each
+          universities' COVID cases is displayed in a convenient manner so that
+          students can easily browse through and view the current active case
+          number in their school. This reduces the amount of email digging and
+          searching through pages, that may not be user friendly, students needs
+          to do to be informed and to make safe decisions.
         </p>
       </div>
     </div>
@@ -73,12 +112,20 @@
               <h4 class="card-title">Jessie Guo</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Third year University of Calgary student studying a combined degree in Computer Science and Finance. 
+                  Third year University of Calgary student studying a combined
+                  degree in Computer Science and Finance.
                 </p>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/jessieguo1/" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/JessieG123" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/jessieguo1/" target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://github.com/JessieG123"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -89,12 +136,20 @@
               <h4 class="card-title">Duan Le</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Third year University of Calgary student studying Software Engineering.
+                  Third year University of Calgary student studying Software
+                  Engineering.
                 </p>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/duan-le/" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/duan-le" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/duan-le/" target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://github.com/duan-le"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -105,12 +160,22 @@
               <h4 class="card-title">Hemish Minhas</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Third year University of Calgary student studying a combined degree in Electrical Engineering and Finance. 
+                  Third year University of Calgary student studying a combined
+                  degree in Electrical Engineering and Finance.
                 </p>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/hemish-minhas/" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/hemish-minhas" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/hemish-minhas/"
+                  target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://github.com/hemish-minhas"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -121,31 +186,47 @@
               <h4 class="card-title">Jane Shen</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Third year University of Calgary student studying Computer Science.
+                  Third year University of Calgary student studying Computer
+                  Science.
                 </p>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/shen-jane/" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/jshenny" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/shen-jane/" target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://github.com/jshenny"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">Jason Szeto</h4>
-                <div class="scrollable">
-                  <p class="card-text">
-                    Third year Mount Royal University Student studying Computer Science. 
-                  </p>
-                </div>
-                <div class="social">
-                  <a href="https://github.com/jason-szeto" target="blank"><i class="fab fa-linkedin"></i></a>
-                  <a href="https://www.linkedin.com/in/jason-szeto/" target="blank" class="github"><i class="fab fa-github"></i></a>
-                </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Jason Szeto</h4>
+              <div class="scrollable">
+                <p class="card-text">
+                  Third year Mount Royal University Student studying Computer
+                  Science.
+                </p>
+              </div>
+              <div class="social">
+                <a href="https://github.com/jason-szeto" target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/jason-szeto/"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
+          </div>
         </div>
         <div class="col-md-4">
           <div class="card">
@@ -153,12 +234,22 @@
               <h4 class="card-title">Jack Yang</h4>
               <div class="scrollable">
                 <p class="card-text">
-                  Third year University of Calgary student studying Computer Science.
+                  Third year University of Calgary student studying Computer
+                  Science.
                 </p>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/jack-yang-hao/" target="blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ahfhafh" target="blank" class="github"><i class="fab fa-github"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/jack-yang-hao/"
+                  target="blank"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+                <a
+                  href="https://github.com/ahfhafh"
+                  target="blank"
+                  class="github"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
           </div>
