--- a/src/index.html
+++ b/src/index.html
@@ -1,208 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Covid Overflow</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="index.css" rel="stylesheet">
-	<link rel="shortcut icon" href="./assets/favicon/favicon-32x32.ico" />
-	<link rel="shortcut icon" href="./assets/favicon/favicon-16x16.ico" />	
-	
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Covid Overflow</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="./assets/favicon/favicon-32x32.ico" />
+    <link rel="shortcut icon" href="./assets/favicon/favicon-16x16.ico" />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+      <div class="container-fluid">
+        <!-- Brand/Logo -->
+        <a class="navbar-brand" href="index.html">Covid Overflow</a>
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-	<div class="container-fluid">
-		<!-- Brand/Logo -->
-		<a class="navbar-brand" href="index.html">Covid Overflow</a>
+        <!--Collapsible navbar for small screens-->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-		<!--Collapsible navbar for small screens-->
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Universities
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a
+                  class="dropdown-item"
+                  href="./universities/mcgill/dashboard_mcgill.php"
+                  >McGill University</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="./universities/uofc/dashboard_uofc.php"
+                  >University of Calgary</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="./universities/uofm/dashboard_uofm.php"
+                  >University of Manitoba</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="./universities/uoft/dashboard_uoft.php"
+                  >University of Toronto</a
+                >
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about/about.html">About Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-		 <!-- Navbar links -->
-		 <div class="collapse navbar-collapse" id="navbarResponsive">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					  Universities
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="./universities/uoft/dashboard_uoft.php">University of Toronto</a>
-						<a class="dropdown-item" href="./universities/uofc/dashboard_uofc.php">University of Calgary</a>
-						<a class="dropdown-item" href="./universities/mcgill/dashboard_mcgill.php">McGill University</a>
-						<a class="dropdown-item" href="./universities/uofm/dashboard_uofm.php">University of Manitoba</a>
-					</div>
-				  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="about/about.html">About Us</a>
-			  </li>
-			</ul>
-		  </div>
-	</div>
-</nav>
+    <!--- Image Slider -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/homepage/background.jpg" />
+          <div class="carousel-caption">
+            <h1 class="display-2">Covid Overflow</h1>
+            <h3>Covid-19 Statistics for Universities Across Canada</h3>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel">
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="assets/homepage/background.jpg">
-			<div class="carousel-caption">
-				<h1 class="display-2">Covid Overflow</h1>
-				<h3 > Covid-19 Statistics for Universities Across Canada </h3>
-			</div>
-		</div>
-	</div>
-</div>
+    <!-- Other Stuff-->
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 id="summary" class="display-4">Latest Covid Summary</h1>
+        </div>
+        <table class="table">
+          <caption class="last-update">
+            Last Updated:
+          </caption>
+          <thead class="thead-light">
+            <tr>
+              <th scope="col">Province</th>
+              <th scope="col">Active Cases</th>
+              <th scope="col">Total Cases</th>
+              <th scope="col">Total Deaths</th>
+              <th scope="col">Recovered</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th class="AB" scope="row">Alberta</th>
+              <td class="AB-active-cases"></td>
+              <td class="AB-total-cases"></td>
+              <td class="AB-total-deaths"></td>
+              <td class="AB-recovered"></td>
+            </tr>
+            <tr>
+              <th class="BC" scope="row">British Columbia</th>
+              <td class="BC-active-cases"></td>
+              <td class="BC-total-cases"></td>
+              <td class="BC-total-deaths"></td>
+              <td class="BC-recovered"></td>
+            </tr>
+            <tr>
+              <th class="MB" scope="row">Manitoba</th>
+              <td class="MB-active-cases"></td>
+              <td class="MB-total-cases"></td>
+              <td class="MB-total-deaths"></td>
+              <td class="MB-recovered"></td>
+            </tr>
+            <tr>
+              <th class="NB" scope="row">New Brunswick</th>
+              <td class="NB-active-cases"></td>
+              <td class="NB-total-cases"></td>
+              <td class="NB-total-deaths"></td>
+              <td class="NB-recovered"></td>
+            </tr>
+            <tr>
+              <th class="NL" scope="row">Newfoundland and Labrador</th>
+              <td class="NL-active-cases"></td>
+              <td class="NL-total-cases"></td>
+              <td class="NL-total-deaths"></td>
+              <td class="NL-recovered"></td>
+            </tr>
+            <tr>
+              <th class="NS" scope="row">Nova Scotia</th>
+              <td class="NS-active-cases"></td>
+              <td class="NS-total-cases"></td>
+              <td class="NS-total-deaths"></td>
+              <td class="NS-recovered"></td>
+            </tr>
+            <tr>
+              <th class="ON" scope="row">Ontario</th>
+              <td class="ON-active-cases"></td>
+              <td class="ON-total-cases"></td>
+              <td class="ON-total-deaths"></td>
+              <td class="ON-recovered"></td>
+            </tr>
+            <tr>
+              <th class="PE" scope="row">Prince Edward Island</th>
+              <td class="PE-active-cases"></td>
+              <td class="PE-total-cases"></td>
+              <td class="PE-total-deaths"></td>
+              <td class="PE-recovered"></td>
+            </tr>
+            <tr>
+              <th class="QC" scope="row">Quebec</th>
+              <td class="QC-active-cases"></td>
+              <td class="QC-total-cases"></td>
+              <td class="QC-total-deaths"></td>
+              <td class="QC-recovered"></td>
+            </tr>
+            <tr>
+              <th class="SK" scope="row">Saskatchewan</th>
+              <td class="SK-active-cases"></td>
+              <td class="SK-total-cases"></td>
+              <td class="SK-total-deaths"></td>
+              <td class="SK-recovered"></td>
+            </tr>
+            <tr>
+              <th class="NW" scope="row">Northwest Territories</th>
+              <td class="NW-active-cases"></td>
+              <td class="NW-total-cases"></td>
+              <td class="NW-total-deaths"></td>
+              <td class="NW-recovered"></td>
+            </tr>
+            <tr>
+              <th class="NU" scope="row">Nunavut</th>
+              <td class="NU-active-cases"></td>
+              <td class="NU-total-cases"></td>
+              <td class="NU-total-deaths"></td>
+              <td class="NU-recovered"></td>
+            </tr>
+            <tr>
+              <th class="YT" scope="row">Yukon</th>
+              <td class="YT-active-cases"></td>
+              <td class="YT-total-cases"></td>
+              <td class="YT-total-deaths"></td>
+              <td class="YT-recovered"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-<!-- Other Stuff-->
-<div class="container-fluid padding">
-	<div class="row welcome text-center">
-		<div class="col-12">
-			<h1 id="summary" class="display-4">Latest Covid Summary</h1>
-		</div>
-		<table class="table">
-			<caption class="last-update">Last Updated:</caption>
-			<thead class="thead-light">
-			  <tr>
-				<th scope="col">Province</th>
-				<th scope="col">Active Cases</th>
-				<th scope="col">Total Cases</th>
-				<th scope="col">Total Deaths</th>
-                <th scope="col">Recovered</th>
-			  </tr>
-			</thead>
-			<tbody>
-			  <tr>
-				<th class="AB" scope="row">Alberta</th>
-				<td class="AB-active-cases"></td>
-				<td class="AB-total-cases"></td>
-				<td class="AB-total-deaths"></td>
-                <td class="AB-recovered"></td>
+    <!--- Footer -->
+    <footer class="container-fluid">
+      <p>HackTogether 2020</p>
+      <p>© Covid Overflow 2020</p>
+    </footer>
+  </body>
 
-			  </tr>
-			  <tr>
-				<th class="BC" scope="row">British Columbia</th>
-				<td class="BC-active-cases"></td>
-				<td class="BC-total-cases"></td>
-				<td class="BC-total-deaths"></td>
-                <td class="BC-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="MB" scope="row">Manitoba</th>
-				<td class="MB-active-cases"></td>
-				<td class="MB-total-cases"></td>
-				<td class="MB-total-deaths"></td>
-                <td class="MB-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="NB" scope="row">New Brunswick</th>
-				<td class="NB-active-cases"></td>
-				<td class="NB-total-cases"></td>
-				<td class="NB-total-deaths"></td>
-                <td class="NB-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="NL" scope="row">Newfoundland and Labrador</th>
-				<td class="NL-active-cases"></td>
-				<td class="NL-total-cases"></td>
-				<td class="NL-total-deaths"></td>
-                <td class="NL-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="NS" scope="row">Nova Scotia</th>
-				<td class="NS-active-cases"></td>
-				<td class="NS-total-cases"></td>
-				<td class="NS-total-deaths"></td>
-                <td class="NS-recovered"></td>
-			  </tr>
-              <tr>
-				<th class="ON" scope="row">Ontario</th>
-				<td class="ON-active-cases"></td>
-				<td class="ON-total-cases"></td>
-				<td class="ON-total-deaths"></td>
-                <td class="ON-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="PE" scope="row">Prince Edward Island</th>
-				<td class="PE-active-cases"></td>
-				<td class="PE-total-cases"></td>
-				<td class="PE-total-deaths"></td>
-                <td class="PE-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="QC" scope="row">Quebec</th>
-				<td class="QC-active-cases"></td>
-				<td class="QC-total-cases"></td>
-				<td class="QC-total-deaths"></td>
-                <td class="QC-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="SK" scope="row">Saskatchewan</th>
-				<td class="SK-active-cases"></td>
-				<td class="SK-total-cases"></td>
-				<td class="SK-total-deaths"></td>
-                <td class="SK-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="NW" scope="row">Northwest Territories</th>
-				<td class="NW-active-cases"></td>
-				<td class="NW-total-cases"></td>
-				<td class="NW-total-deaths"></td>
-                <td class="NW-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="NU" scope="row">Nunavut</th>
-				<td class="NU-active-cases"></td>
-				<td class="NU-total-cases"></td>
-				<td class="NU-total-deaths"></td>
-                <td class="NU-recovered"></td>
-			  </tr>
-			  <tr>
-				<th class="YT" scope="row">Yukon</th>
-				<td class="YT-active-cases"></td>
-				<td class="YT-total-cases"></td>
-				<td class="YT-total-deaths"></td>
-                <td class="YT-recovered"></td>
-			  </tr>
-			</tbody>
-		  </table>
-	</div>
-</div>
-
-<!--- Footer -->
-<footer class="container-fluid">
-	<p>HackTogether 2020 </p>
-	<p>© Covid Overflow 2020</p>
-
-</footer>
-
-</body>
-
-<script type="text/javascript">
-    var apiUrl = 'https://api.opencovid.ca/summary';
-    fetch(apiUrl).then(response => {
-      	return response.json();
-    }).then(data => {
+  <script type="text/javascript">
+    var apiUrl = "https://api.opencovid.ca/summary";
+    fetch(apiUrl)
+      .then((response) => {
+        return response.json();
+      })
+      .then((data) => {
         let obj = JSON.parse(JSON.stringify(data));
-        const provincesTerritoriesArr = ["AB", "BC", "MB", "NB", "NL", "NS", "NU", "NW", "ON", "PE", "QC", "Repatriated", "SK", "YT"];
-        
-        for (let i = 0; i < 14; i++) {
-            if (provincesTerritoriesArr[i] == "Repatriated") continue;
-            document.querySelector(`.${provincesTerritoriesArr[i]}-active-cases`).innerHTML = obj.summary[i].active_cases;
-            document.querySelector(`.${provincesTerritoriesArr[i]}-total-cases`).innerHTML = obj.summary[i].cumulative_cases;
-            document.querySelector(`.${provincesTerritoriesArr[i]}-total-deaths`).innerHTML = obj.summary[i].cumulative_deaths;
-            document.querySelector(`.${provincesTerritoriesArr[i]}-recovered`).innerHTML = obj.summary[i].recovered;
-        }
-        document.querySelector(".last-update").innerHTML = `Last Updated (dd-mm-yyyy): ${obj.summary[0].date}`;
-    });
-</script>
+        const provincesTerritoriesArr = [
+          "AB",
+          "BC",
+          "MB",
+          "NB",
+          "NL",
+          "NS",
+          "NU",
+          "NW",
+          "ON",
+          "PE",
+          "QC",
+          "Repatriated",
+          "SK",
+          "YT",
+        ];
 
+        for (let i = 0; i < 14; i++) {
+          if (provincesTerritoriesArr[i] == "Repatriated") continue;
+          document.querySelector(
+            `.${provincesTerritoriesArr[i]}-active-cases`
+          ).innerHTML = obj.summary[i].active_cases;
+          document.querySelector(
+            `.${provincesTerritoriesArr[i]}-total-cases`
+          ).innerHTML = obj.summary[i].cumulative_cases;
+          document.querySelector(
+            `.${provincesTerritoriesArr[i]}-total-deaths`
+          ).innerHTML = obj.summary[i].cumulative_deaths;
+          document.querySelector(
+            `.${provincesTerritoriesArr[i]}-recovered`
+          ).innerHTML = obj.summary[i].recovered;
+        }
+        document.querySelector(
+          ".last-update"
+        ).innerHTML = `Last Updated (dd-mm-yyyy): ${obj.summary[0].date}`;
+      });
+  </script>
 </html>
