--- a/src/about/about.html
+++ b/src/about/about.html
@@ -55,6 +55,11 @@
                   href="../universities/mcgill/dashboard_mcgill.php"
                   >McGill University</a
                 >
+                <a 
+                  class="dropdown-item"
+                  href="../universities/sait/dashboard_sait.php"
+                  >SAIT</a
+                >
                 <a
                   class="dropdown-item"
                   href="../universities/uofc/dashboard_uofc.php"
