--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
 		<li data-target="#slides" data-slide-to="2"></li>
 		<li data-target="#slides" data-slide-to="3"></li>
 		<li data-target="#slides" data-slide-to="4"></li>
+    <li data-target="#slides" data-slide-to="5"></li>
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
@@ -129,6 +130,13 @@
 			<div class="carousel-caption">
 				<h2 class="display-2" id="bold">Covid-19 Statistics for McGill University</h1>
 				<button type="button" onclick="location.href='./universities/mcgill/dashboard_mcgill.php'" class="btn btn-primary btn-lg" id="uniButton">Find out</button>
+			</div>
+		</div>
+    <div class="carousel-item">
+			<img src="assets/homepage/sait.jpg">
+			<div class="carousel-caption">
+				<h2 class="display-2" id="bold">Covid-19 Statistics for SAIT</h1>
+				<button type="button" onclick="location.href='./universities/sait/dashboard_sait.php'" class="btn btn-primary btn-lg" id="uniButton">Find out</button>
 			</div>
 		</div>
 	</div>
